[gd_scene load_steps=3 format=3 uid="uid://cy0jo058egtuc"]

[ext_resource type="Script" uid="uid://7bmkrehx3j0s" path="res://Scene/Menu/setting.gd" id="1_h1cxd"]
[ext_resource type="AudioStream" uid="uid://dp5pbimaxs0y3" path="res://music.mp3" id="2_tol4j"]

[node name="Setting" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_h1cxd")

[node name="CenterContainer_setting" type="CenterContainer" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="ColorRect" type="ColorRect" parent="CenterContainer_setting"]
custom_minimum_size = Vector2(400, 200)
layout_mode = 2
color = Color(0.25098, 0.25098, 0.25098, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer_setting"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer_setting/VBoxContainer"]
layout_mode = 2

[node name="Margin_left" type="MarginContainer" parent="CenterContainer_setting/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer_setting/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="Margin_top" type="MarginContainer" parent="CenterContainer_setting/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Label_volume" type="Label" parent="CenterContainer_setting/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Volume"

[node name="Margin_volume" type="MarginContainer" parent="CenterContainer_setting/VBoxContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(240, 0)
layout_mode = 2

[node name="Volume" type="HSlider" parent="CenterContainer_setting/VBoxContainer/HBoxContainer/VBoxContainer/Margin_volume"]
unique_name_in_owner = true
layout_mode = 2
min_value = -10.0
max_value = 10.0

[node name="Label_mute" type="Label" parent="CenterContainer_setting/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Mute"

[node name="Mute" type="CheckBox" parent="CenterContainer_setting/VBoxContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="Margin_bottom" type="MarginContainer" parent="CenterContainer_setting/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer_setting/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="CenterContainer_setting/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2

[node name="Button_back" type="Button" parent="CenterContainer_setting/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(140, 0)
layout_mode = 2
text = "Back"

[node name="Margin_right" type="MarginContainer" parent="CenterContainer_setting/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_tol4j")
volume_db = -30.0
autoplay = true

[connection signal="value_changed" from="CenterContainer_setting/VBoxContainer/HBoxContainer/VBoxContainer/Margin_volume/Volume" to="." method="_on_volume_value_changed"]
[connection signal="toggled" from="CenterContainer_setting/VBoxContainer/HBoxContainer/VBoxContainer/Mute" to="." method="_on_check_box_toggled"]
[connection signal="pressed" from="CenterContainer_setting/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer/Button_back" to="." method="_on_button_pressed"]
